Table ParkingLots {
    lot_id int [pk]
    name varchar(100)
    section char(1)
    total_spaces smallint [default: 0]
}

Table ParkingSpaces {
    space_id int [pk]
    lot_id int [ref: < ParkingLots.lot_id]
    sensor_id int [ref: < Sensors.sensor_id]
    occupied bool [default: 0]
    last_updated datetime2
}

Table Sensors {
    sensor_id int [pk]
    secret char(100)
}

Table OccupancyEvents {
    event_id int [pk]
    space_id int [ref: < ParkingSpaces.space_id]
    occupied bool [default: 0]
    event_time datetime2
}

Table Users {
    user_id int [pk]
    username varchar
    password varchar
}
